fix: fixded bottom border on gallery elements on tablets adn descktops

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -522,6 +522,7 @@ input:disabled + .feedback__label--checkbox:after {
 }
 @media (min-width: 768px) {
   .photo-gallery__item {
+    border-bottom: none;
     width: 50%;
     padding: 0;
     display: flex;
