--- a/source/less/blocks/photo-gallery.less
+++ b/source/less/blocks/photo-gallery.less
@@ -21,6 +21,7 @@
 
 
   @media (min-width: @tablet-width) {
+    border-bottom: none;
     width: 50%;
     padding: 0;
     display: flex;
